// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rollup > basic.js 1`] = `
"// basic.js
var basic = \`import 'unplugin-utils'
import 'js-tokens'
import 'empathic/package'
import 'unplugin'
import 'escape-string-regexp'
\`;

export { basic as default };
"
`;

exports[`rollup > early-error.js 1`] = `[Error: Early error]`;

exports[`rollup > error.js 1`] = `
[Error: Unused 1 dependencies found: 

- js-tokens

You can remove them from #CWD#/package.json]
`;

exports[`rollup > error-comment.js 1`] = `
[Error: Unused 3 dependencies found: 

- empathic
- escape-string-regexp
- js-tokens

You can remove them from #CWD#/package.json]
`;

exports[`rollup > error-root.js 1`] = `[Error: Cannot find package.json from root: /does/not/exist]`;

exports[`rollup > error-tsx.tsx 1`] = `
[Error: Unused 2 dependencies found: 

- escape-string-regexp
- unplugin

You can remove them from #CWD#/package.json]
`;

exports[`rollup > error-vue.vue 1`] = `
[Error: Unused 3 dependencies found: 

- empathic
- escape-string-regexp
- js-tokens

You can remove them from #CWD#/package.json]
`;
